log/futures.0.3.31.log
[futures] download directory: /var/tmp/top100_artifacts/futures-0.3.31
+ curl -sL https://crates.io/api/v1/crates/futures/0.3.31/download
+ tar xzf -
+ cd /var/tmp/top100_artifacts/futures-0.3.31
+ cargo clean
     Removed 0 files
+ cargo +stable test ''
    Updating crates.io index
    Blocking waiting for file lock on package cache
     Locking 75 packages to latest compatible versions
      Adding tokio v0.1.22 (available: v1.47.1)
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
   Compiling autocfg v1.5.0
   Compiling libc v0.2.174
   Compiling cfg-if v0.1.10
   Compiling maybe-uninit v2.0.0
   Compiling lazy_static v1.5.0
   Compiling semver-parser v0.7.0
   Compiling futures v0.1.31
   Compiling slab v0.4.10
   Compiling crossbeam-utils v0.7.2
   Compiling semver v0.9.0
   Compiling rustc_version v0.2.3
   Compiling iovec v0.1.4
   Compiling log v0.4.27
   Compiling scopeguard v1.2.0
   Compiling proc-macro2 v1.0.95
   Compiling tokio-executor v0.1.10
   Compiling unicode-ident v1.0.18
   Compiling byteorder v1.5.0
   Compiling parking_lot_core v0.6.3
   Compiling parking_lot v0.9.0
   Compiling net2 v0.2.39
   Compiling num_cpus v1.17.0
   Compiling bytes v0.4.12
   Compiling quote v1.0.40
   Compiling tokio-io v0.1.13
   Compiling memoffset v0.5.6
   Compiling smallvec v0.6.14
   Compiling syn v2.0.104
   Compiling mio v0.6.23
   Compiling lock_api v0.3.4
   Compiling crossbeam-epoch v0.8.2
   Compiling fnv v1.0.7
   Compiling tokio-sync v0.1.8
   Compiling tokio-reactor v0.1.12
   Compiling futures-core v0.3.31
   Compiling futures-sink v0.3.31
   Compiling crossbeam-deque v0.7.4
   Compiling futures-channel v0.3.31
   Compiling tokio-codec v0.1.2
   Compiling crossbeam-queue v0.2.3
   Compiling futures-task v0.3.31
   Compiling memchr v2.7.5
   Compiling futures-io v0.3.31
   Compiling pin-project-lite v0.2.16
   Compiling pin-utils v0.1.0
   Compiling tokio-threadpool v0.1.18
   Compiling mio-uds v0.6.8
   Compiling tokio-uds v0.2.7
   Compiling tokio-fs v0.1.7
   Compiling tokio-udp v0.1.6
   Compiling tokio-tcp v0.1.4
   Compiling tokio-timer v0.2.13
   Compiling tokio-current-thread v0.1.7
   Compiling tokio v0.1.22
   Compiling static_assertions v1.1.0
   Compiling assert_matches v1.5.0
   Compiling futures-macro v0.3.31
   Compiling pin-project-internal v1.1.10
   Compiling futures-util v0.3.31
   Compiling pin-project v1.1.10
   Compiling futures-executor v0.3.31
   Compiling futures v0.3.31 (/var/tmp/top100_artifacts/futures-0.3.31)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `futures_test`
 --> tests/stream_futures_unordered.rs:6:5
  |
6 | use futures_test::future::FutureTestExt;
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `futures_test`
  |
help: there is a crate or module with a similar name
  |
6 - use futures_test::future::FutureTestExt;
6 + use futures_task::future::FutureTestExt;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `futures_test`
 --> tests/stream_futures_unordered.rs:7:5
  |
7 | use futures_test::task::noop_context;
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `futures_test`
  |
help: there is a crate or module with a similar name
  |
7 - use futures_test::task::noop_context;
7 + use futures_task::task::noop_context;
  |

error[E0432]: unresolved import `futures_test`
 --> tests/stream_futures_unordered.rs:8:5
  |
8 | use futures_test::{assert_stream_done, assert_stream_next, assert_stream_pending};
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `futures_test`
  |
help: there is a crate or module with a similar name
  |
8 - use futures_test::{assert_stream_done, assert_stream_next, assert_stream_pending};
8 + use futures_task::{assert_stream_done, assert_stream_next, assert_stream_pending};
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `futures_test`
 --> tests/sink.rs:9:5
  |
9 | use futures_test::task::panic_context;
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `futures_test`
  |
help: there is a crate or module with a similar name
  |
9 - use futures_test::task::panic_context;
9 + use futures_task::task::panic_context;
  |

error[E0599]: no method named `pending_once` found for struct `futures::future::Ready` in the current scope
   --> tests/stream_futures_unordered.rs:280:33
    |
280 |     let fut = future::ready(()).pending_once().assert_unmoved();
    |                                 ^^^^^^^^^^^^ method not found in `Ready<()>`

For more information about this error, try `rustc --explain E0433`.
Some errors have detailed explanations: E0432, E0433, E0599.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `futures` (test "sink") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `futures` (test "stream_futures_unordered") due to 4 previous errors
+ RESULT=101
+ cd /var/tmp/top100_artifacts
+ rm -rf /var/tmp/top100_artifacts/futures-0.3.31
+ exit 101
